Fixed Center Alignment

--- a/styleintro.css
+++ b/styleintro.css
@@ -33,7 +33,7 @@ body {
 
 .logocontent {
 	margin: 0 auto;
-	width: 280px;
+	width: 295px;
 }
 
 .signin {
